Add swagger and update docker controller tests to bdd
