# web/api/v1/recoverController.go
@@ -26,43 +26,16 @@ func NewRecoverController(cache *cache.Manager, logger log.Logger) *RController 
 	}
 }
 
-type requestPayload struct {
-	Alerts []*Alert `json:"alerts"`
-}
-
-type Alert struct {
-	Status string `json:"status"`
-	Labels Labels `json:"labels"`
-}
-
-type Labels struct {
-	RecoverJob    string `json:"recoverJob"`
-	RecoverTarget string `json:"recoverTarget"`
-	RecoverAll    bool   `json:"recoverAll"`
-}
-
-type alertStatus int
-
-const (
-	firing alertStatus = iota
-	resolved
-	invalid
-)
-
-func (s alertStatus) String() string {
-	return [...]string{"firing", "resolved"}[s]
-}
-
-func toStatusEnum(value string) (alertStatus, error) {
-	switch value {
-	case firing.String():
-		return firing, nil
-	case resolved.String():
-		return resolved, nil
-	}
-	return invalid, errors.New(fmt.Sprintf("The status {%s} is not supported", value))
-}
-
+// CalcExample godoc
+// @Summary recover from failures
+// @Description Alertmanager webhook to recover from failures
+// @Tags Recover
+// @Accept json
+// @Produce json
+// @Param requestPayload body requestPayload true "Create request payload that contains the recovery details"
+// @Success 200 {object} RecoverResponsePayload
+// @Failure 400 {object} RecoverResponsePayload
+// @Router /recover/alertmanager [post]
 func (rController *RController) RecoverActionAlertmanagerWebHook(w http.ResponseWriter, r *http.Request) {
 	response := newDefaultRecoverResponse()
 
@@ -85,41 +58,41 @@ func (rController *RController) RecoverActionAlertmanagerWebHook(w http.Response
 	setRecoverResponseInWriter(w, response, rController.logger)
 }
 
+type requestPayload struct {
+	Alerts []*Alert `json:"alerts"`
+}
+
+type Alert struct {
+	Status string `json:"status"`
+	Labels Labels `json:"labels"`
+}
+
+type Labels struct {
+	RecoverJob    string `json:"recoverJob,omitempty"`
+	RecoverTarget string `json:"recoverTarget,omitempty"`
+	RecoverAll    bool   `json:"recoverAll,omitempty"`
+}
+
 func (rController *RController) performActionBasedOnLabels(labels Labels, response *RecoverResponsePayload) {
 	var wg sync.WaitGroup
 	items := rController.cacheManager.GetAll()
 	switch {
 	case labels.RecoverAll:
 		for key, val := range items {
-			wg.Add(1)
-			go func(key string, val func() (*proto.StatusResponse, error)) {
-				defer wg.Done()
-				recoverMsg := performAction(key, val, rController.cacheManager)
-				response.RecoverMessage = append(response.RecoverMessage, recoverMsg)
-			}(key, val.Object.(func() (*proto.StatusResponse, error)))
+			rController.performAsync(key, val.Object.(func() (*proto.StatusResponse, error)), response, &wg)
 		}
 	case labels.RecoverJob != "":
 		for key, val := range items {
 			jobNameTarget := strings.Split(key, ",")
 			if jobNameTarget[0] == labels.RecoverJob {
-				wg.Add(1)
-				go func(key string, val func() (*proto.StatusResponse, error)) {
-					defer wg.Done()
-					recoverMsg := performAction(key, val, rController.cacheManager)
-					response.RecoverMessage = append(response.RecoverMessage, recoverMsg)
-				}(key, val.Object.(func() (*proto.StatusResponse, error)))
+				rController.performAsync(key, val.Object.(func() (*proto.StatusResponse, error)), response, &wg)
 			}
 		}
 	case labels.RecoverTarget != "":
 		for key, val := range items {
 			jobNameTarget := strings.Split(key, ",")
 			if jobNameTarget[2] == labels.RecoverTarget {
-				wg.Add(1)
-				go func(key string, val func() (*proto.StatusResponse, error)) {
-					defer wg.Done()
-					recoverMsg := performAction(key, val, rController.cacheManager)
-					response.RecoverMessage = append(response.RecoverMessage, recoverMsg)
-				}(key, val.Object.(func() (*proto.StatusResponse, error)))
+				rController.performAsync(key, val.Object.(func() (*proto.StatusResponse, error)), response, &wg)
 			}
 		}
 	}
@@ -127,7 +100,16 @@ func (rController *RController) performActionBasedOnLabels(labels Labels, respon
 	wg.Wait()
 }
 
-func performAction(uniqueName string, function func() (*proto.StatusResponse, error), cache *cache.Manager) *RecoverMessage {
+func (rController *RController) performAsync(key string, val func() (*proto.StatusResponse, error), response *RecoverResponsePayload, wg *sync.WaitGroup) {
+	wg.Add(1)
+	go func() {
+		defer wg.Done()
+		recoverMsg := action(key, val, rController.cacheManager)
+		response.RecoverMessage = append(response.RecoverMessage, recoverMsg)
+	}()
+}
+
+func action(uniqueName string, function func() (*proto.StatusResponse, error), cache *cache.Manager) *RecoverMessage {
 	jobNameTarget := strings.Split(uniqueName, ",")
 	statusResponse, err := function()
 
@@ -140,4 +122,26 @@ func performAction(uniqueName string, function func() (*proto.StatusResponse, er
 	cache.Delete(uniqueName)
 	message := fmt.Sprintf("Response from target {%s}, {%s}, {%s}", jobNameTarget[2], statusResponse.Message, statusResponse.Status)
 	return successRecoverResponse(message)
+}
+
+type alertStatus int
+
+const (
+	firing alertStatus = iota
+	resolved
+	invalid
+)
+
+func (s alertStatus) String() string {
+	return [...]string{"firing", "resolved"}[s]
+}
+
+func toStatusEnum(value string) (alertStatus, error) {
+	switch value {
+	case firing.String():
+		return firing, nil
+	case resolved.String():
+		return resolved, nil
+	}
+	return invalid, errors.New(fmt.Sprintf("The status {%s} is not supported", value))
 }
