# web/api/v1/service/serviceController.go
@@ -90,6 +90,18 @@ func newServiceRequest(details *RequestPayload) *proto.ServiceRequest {
 	}
 }
 
+// CalcExample godoc
+// @Summary Inject service failures
+// @Description Perform start or stop action on a service
+// @Tags Failure injections
+// @Accept json
+// @Produce json
+// @Param action query string true "Specify to perform a start or a stop on the specified service"
+// @Param requestPayload body RequestPayload true "Specify the job name, service name and target"
+// @Success 200 {object} ResponsePayload
+// @Failure 400 {object} ResponsePayload
+// @Failure 500 {object} ResponsePayload
+// @Router /service [post]
 func (s *SController) ServiceAction(w http.ResponseWriter, r *http.Request) {
 	response := newDefaultResponse()
 
